--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "name": "Bosco",
-  "description": "Bosco is a whatsapp bot made by @pepe sir with baileys",
-  "repository": "https://github.com/pepesir/Bosco",
-  "logo": "https://telegra.ph/file/f40d0ef77439f516c050f.jpg",
+  "description": "CY33R-360 is a whatsapp bot made by @Abhi sir with baileys",
+  "repository": "https://github.com/CY33R-360/Bosco",
+  "logo": "https://i.imgur.com/wGQXuLO.jpeg",
   "keywords": ["bosco", "nodejs", "bot", "whatsapp bot", "whatsapp automation"],
   "buildpacks": [
     {
